--- a/style.css
+++ b/style.css
@@ -5,24 +5,27 @@
 }
 
 .calculator{
-    padding: 20px;
+    padding: 50px;
 }
 
 .screen{
     width: 250px;
     height: 50px;
     margin: 5px;
-    border: 2px solid grey;
-    box-shadow: inset 0 0 1px #000000;
+    --block-background-color: rgb(235, 210, 250);
 }
 
-button {
-    background-color: pink;
+button.block{
     width: 50px;
     height: 50px;
     margin: 5px;
+    --block-background-color: rgb(175, 83, 228);
+    color: white;
+    display: inline-block;
+    font-size: 20px;
 }
 
-.operator {
+.block.operator {
     background-color: #ffd9ec;
-}
+    --block-background-color: rgb(114, 40, 156);
+} 
